adjust script runner

--- a/quiz/package.json
+++ b/quiz/package.json
@@ -1,9 +1,11 @@
 {
   "name": "quiz",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "",
   "scripts": {
-    "dev": "npx nodemon index.ts",
+    "titleCase": "ts-node level-1-title-case.ts",
+    "async": "ts-node level-2-async.ts",
+    "promise": "ts-node level-2-promise.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,7 +13,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
